# rusty-calc

./: README.md  pyproject.toml
.github/workflows/: ci_test.yml  release-pypi.yml
src/rustycalc/: __init__.py
